continue watching cards fix render issue on mobile

--- a/src/components/anime/AnimeCard.module.css
+++ b/src/components/anime/AnimeCard.module.css
@@ -71,6 +71,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transform: translateZ(0);
 }
 
 .progressBar {
